--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,138 @@
-body {
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: " Open Sans";
+}
+body{
+  overflow-x: hidden;
+}
+/* Mobile con */
+.filters-attractions-mobile-con{
+  width: 100%;
+  background-color: white;
+  display: flex;
+  column-gap: 1rem;
+  padding: 1rem;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.filters-attractions-mobile-con select{
+  width: 6rem;
+  padding: 0.5rem;
+  border-radius: 25px;
+}
+.filters-attractions-mobile-con select:focus{
+  outline: none;
+}
+
+
+
+
+
+.nav-con{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem;
+  box-shadow: 50px 0px 100px rgb(235, 232, 232);
+}
+.search-bar-nav-con{
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+  background-color: white;
+  width: 45rem;
+  padding: 1rem 0.3rem;
+  border-radius: 25px;
+}
+.enter-dates-con{
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+  border: 1px solid rgb(212, 208, 208);
+  padding: 0.8rem;
+  border-radius: 25px;
+}
+.search-bar-nav-con{
+    border: 1px solid rgb(212, 208, 208);
+
+}
+
+.search-bar-nav-con > input{
+  border: none;
+  flex: 8;
+  height: 100%;
+  background-color: transparent;
+  font-size: 1.2rem;
+}
+.search-bar-nav-con > input:focus{
+  outline: none;
+}
+
+.filters-attractions-con{
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+.filters-attractions-con select{
+  width: 8rem;
+  padding: 0.8rem;
+  border-radius: 25px;
+}
+.filters-attractions-con select:focus{
+  outline: none;
+}
+.mobile-icon-con{
+  display: none;
+}
+
+/* BODY SECTION */
+.gen-grid-con{
+  display: grid;
+  grid-template-columns: 45% 55%;
+  height:100vh;
+}
+.main-location-gen-con{
+  overflow: scroll;
+}
+.main-location-gen-con::-webkit-scrollbar {
+  width: 8px; 
+}
+
+.main-location-gen-con::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 4px; 
+}
+.location-con{
+  display: flex;
+  background-color: whitesmoke;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  border-radius: 20px;
+}
+.location-img-con{
+  width: 30rem;
+}
+.location-img-con > img{
+  width: 100%;
+  border-radius: 10px;
+  height: 16.4rem;
+  object-fit: cover;
+}
+.location-details-con > h2{
+  margin-bottom: 1rem;
+}
+.location-details-con p{
+  padding-bottom: 1rem;
+  font-family: "Open Sans";
+}
+.location-details-con > ul{
+  display: flex;
+  list-style-type: none;
+}
+.location-details-con > ul > li{
+  color: blue;
 }
